--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "interface-design",
+  "name": "group30datamangement",
   "version": "0.1.0",
+  "homepage": ".",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "bootstrap": "^4.6.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.1",
+    "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "reactstrap": "^8.9.0",
+    "react-router": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
